Attempted bug fix - when typing in text box, upper part of chatbot cut off

--- a/src/style.css
+++ b/src/style.css
@@ -101,7 +101,7 @@ body.show-chatbot .chatbot {
 /* The container that holds our text message. */ 
 .chatbot .chat-message-storage {   
   overflow-y: auto;  /* Adds a scrollbar to the y-axis when its content overflows the bounds of that element */
-  height: 50vh;   
+  height: 450px;   
   padding: 25px 30px 100px 30px;  /* Top, right, bottom, left margins */
 }
 
